gke-k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: security-converter
  labels:
    name: security-converter
    environment: production
    classification: controlled
    owner: dnd
